PDIO-45 #comment Server start and stop scripts, and refactorization